puree-tests/src/test/resources/neg/UnusedOption.scala
object UnusedOption {
  def f(): Int = {
    Option(1)
    1
  }
}
